# GohobiTicket2

./: .gitignore  README.md  pyproject.toml
gt_back/: .env.example  README.md  manage.py
gt_back/diaries/: enums.py  serializers.py
gt_back/diaries/migrations/: 0001_initial.py  0002_auto_20231221_1140.py  0003_diary_tags.py  0004_auto_20240111_1228.py  0005_alter_diarytagrelation_tag_master.py  0006_auto_20240315_1132.py  0006_auto_20240315_1138.py  0006_auto_20240315_1151.py  0007_auto_20240315_1213.py  0008_auto_20240315_1214.py  0009_auto_20240317_1043.py  0010_auto_20240319_0506.py  0011_auto_20240429_1036.py
gt_back/gt_back/: asgi.py  exception_handler.py  logging.py  messages.py  settings.py  urls.py  view_set_mixins.py  wsgi.py
gt_back/http/: diary.http  diary_tag.http  diary_tags.http  ticket.http
gt_back/release/: apps.py  urls.py  views.py
gt_back/tickets/: enums.py  models.py  permissions.py  permissions_util.py  serializers.py  tests.py  views.py
gt_back/user_relations/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
gt_back/user_settings/: models.py  tests.py
gt_back/users/: models.py  tests.py  urls.py  views.py
gt_front/: README.md  index.html  package-lock.json  package.json
gt_front/config/: index.js
gt_front/src/: store.js  utils.js
gt_front/static/: site.webmanifest
gt_front2/: .env.development  .env.production  .gitignore  biome.json  package-lock.json  package.json
gt_front2/public/: index.html  manifest.json
gt_front2/src/: App.tsx  BottomNav.tsx  index.css  index.tsx  service-worker.ts
(+200 files in other folders)
