[tool.poetry]
name = "gohobiticket2"
version = "0.1.0"
description = ""
authors = ["lynxlevin <72173230+lynxlevin@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.2.11"
djangorestframework = "^3.13.1"
Markdown = "^3.3.7"
django-filter = "^21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
